added GUI core and got javafx to work